[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/playerBUTAWESOME.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/items/physgun.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/stepsound.og.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/all undertale sounds/snd_hurt1.wav" type="AudioStream" id=6]
[ext_resource path="res://sprites/playerHand.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 12, 20 )

[sub_resource type="Animation" id=33]
resource_name = "Interact"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.5 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 10, -13 ), Vector2( 33, -2 ), Vector2( 10, -13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.5 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ 0.0, 59.9999, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.325 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ), Vector2( 1.2, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../HandArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=36]
resource_name = "Parried"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.7 ),
"transitions": PoolRealArray( 0.5, 1, 2, 1 ),
"update": 0,
"values": [ 15.0, 47.7859, 47.7859, 15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.7 ),
"transitions": PoolRealArray( 0.5, 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 14, 3 ), Vector2( 7, 15 ), Vector2( 7, 15 ), Vector2( 16, 6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../HandArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, -13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../HandArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "onSprint"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.2 ),
"transitions": PoolRealArray( 2, 0.5, 4.59479 ),
"update": 0,
"values": [ Vector2( 1.1, 0.8 ), Vector2( 0.2, 2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Hurt/CanvasLayer/HurtThing:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 2, 0.5, 0.5, 1 ),
"update": 0,
"values": [ Color( 0.521569, 0, 0, 0.603922 ), Color( 0.913725, 0, 0, 0.290196 ), Color( 0.521569, 0, 0, 0.137255 ), Color( 0.521569, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hurt/CanvasLayer/HurtThing:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.521569, 0, 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 63.1269

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 9, 9 )

[sub_resource type="OccluderPolygon2D" id=24]
cull_mode = 1
polygon = PoolVector2Array( 7, -8, 7, -7, 8, -7, 8, 7, 7, 7, 7, 8, -7, 8, -7, 7, -8, 7, -8, -7, -7, -7, -7, -8 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )

[node name="Walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="HurtNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.4
pitch_scale = 0.96

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.19209e-07, 0 )
texture = ExtResource( 1 )

[node name="Slots" type="Node2D" parent="."]

[node name="0" type="Node2D" parent="Slots"]

[node name="physgun" parent="Slots/0" instance=ExtResource( 3 )]

[node name="1" type="Node2D" parent="Slots"]

[node name="2" type="Node2D" parent="Slots"]

[node name="HandArea" type="Area2D" parent="."]
visible = false
position = Vector2( 10, -13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandArea"]
position = Vector2( 11, 13 )
shape = SubResource( 35 )
disabled = true

[node name="Hand" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 10, -13 )

[node name="Interact" type="AnimationPlayer" parent="Hand"]
anims/Interact = SubResource( 33 )
anims/Parried = SubResource( 36 )
anims/RESET = SubResource( 34 )

[node name="Sprite" type="Sprite" parent="Hand"]
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprint" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/onSprint = SubResource( 3 )

[node name="Hurt" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 22 )
anims/RESET = SubResource( 23 )

[node name="CanvasLayer" type="CanvasLayer" parent="Hurt"]

[node name="HurtThing" type="ColorRect" parent="Hurt/CanvasLayer"]
margin_left = -24.0
margin_top = -36.0
margin_right = 1058.0
margin_bottom = 639.0
mouse_filter = 2
color = Color( 0.521569, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="intArea" type="Area2D" parent="."]
visible = false
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="intArea"]
shape = SubResource( 4 )

[node name="HurtHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtHitbox"]
shape = SubResource( 21 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 24 )

[node name="VehicleTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="HandArea" to="." method="_on_HandArea_area_entered"]
[connection signal="area_entered" from="intArea" to="." method="_on_intArea_area_entered"]
[connection signal="timeout" from="VehicleTimer" to="." method="_on_Timer_timeout"]
